@@ -1,5 +1,12 @@
 2013-10-09  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/CgalToolbox/CgalMeshSegmentation.cpp: (0.1.4)
+	* matlab/CgalToolbox/cgal_meshseg.m: (0.1.1)
+
+	- Add warning to the help header about this function producing
+	stray vertices, non-oriented triangles and holes, and how to
+	correct it within Gerardus.
+
 	* Add matlab/CgalToolbox/CgalTriFillHoles.cpp: (0.1.0)
 	* Add matlab/CgalToolbox/cgal_tri_fillholes.m: (0.1.0)
 	* Add matlab/test/test_cgal_tri_fillholes.m: (0.1.0)
